[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/Starfield.gd" type="Script" id=1]
[ext_resource path="res://scenes/ShipAvatar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/VFX Scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/SystemInformation.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/StarMapViewport.gd" type="Script" id=6]
[ext_resource path="res://scripts/Grid.gd" type="Script" id=7]
[ext_resource path="res://sprites/grid_square.png" type="Texture" id=8]
[ext_resource path="res://scenes/Boundary.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/warning hud.gd" type="Script" id=10]
[ext_resource path="res://scripts/map_FuelRange.gd" type="Script" id=11]
[ext_resource path="res://TravelRoutes/TravelRoutes.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "WarningFade"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5, 1, 2 ),
"transitions": PoolRealArray( 1, 0.435275, 1, 1 ),
"update": 0,
"values": [ Color( 1.2, 0, 0, 0 ), Color( 1.2, 0, 0, 1 ), Color( 1.2, 0, 0, 1 ), Color( 1.2, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 4 )

[node name="StarMapView" type="Node2D"]
light_mask = -2147483647
script = ExtResource( 6 )

[node name="VFX Scene" parent="." instance=ExtResource( 4 )]

[node name="BoundaryTop" parent="." instance=ExtResource( 9 )]
margin_right = 500.0
margin_bottom = 200.0

[node name="BoundaryRight" parent="." instance=ExtResource( 9 )]
margin_right = 500.0
margin_bottom = 200.0
Side = 1

[node name="BoundaryBottom" parent="." instance=ExtResource( 9 )]
margin_right = 500.0
margin_bottom = 200.0
Side = 2

[node name="BoundaryLeft" parent="." instance=ExtResource( 9 )]
margin_right = 500.0
margin_bottom = 200.0
Side = 3

[node name="Grid" type="TextureRect" parent="."]
self_modulate = Color( 0.0666667, 0.0862745, 0.164706, 1 )
margin_right = 1291.0
margin_bottom = 742.0
texture = ExtResource( 8 )
stretch_mode = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TravelRoutes" parent="." instance=ExtResource( 12 )]

[node name="Starfield" type="Node2D" parent="."]
script = ExtResource( 1 )
NebulaPath = "res://scenes/background space dust.tscn"
WormholePath = "res://Wormhole/Wormhole.tscn"

[node name="ShipAvatarView" parent="." instance=ExtResource( 2 )]

[node name="SystemInformation" parent="." instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="warning hud" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="IntraclusterMedium" type="Label" parent="warning hud"]
self_modulate = Color( 1.2, 0, 0, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
margin_bottom = -66.0
custom_fonts/font = SubResource( 2 )
text = "WARNING: INTRACLUSTER MEDIUM"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="warning hud/IntraclusterMedium"]
anims/WarningFade = SubResource( 3 )

[node name="MapName" type="CanvasLayer" parent="."]

[node name="MapUI" type="Control" parent="MapName"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapTitle" type="Label" parent="MapName/MapUI"]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 5 )
text = "Sector Space"
align = 1
uppercase = true

[node name="FuelRange" type="Label" parent="MapName/MapUI"]
anchor_right = 1.0
margin_top = 88.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 6 )
text = "Fuel Range"
align = 1
uppercase = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
